--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -38,26 +38,38 @@ jobs:
           - sample-code/module-20-docker
           - sample-code/end-to-end
     steps:
-      # Step 1: Check out the repository code for the specific branch
+      # Check out the repository code for the specific branch
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
+          fetch-depth: 0
           ref: ${{ matrix.branch }}
 
-      # Step 2: Set up Node.js
+      # Check out the branch
+      - name: Fetch specific branch
+        run: git fetch origin ${{ matrix.branch }} && git checkout ${{ matrix.branch }}
+
+      # List contents of the test directory
+      - name: List test files
+        run: |
+          echo "Current branch: ${{ matrix.branch }}"
+          echo "Test cases:"
+          ls -R src/test/java/com/serenitydojo/playwright
+
+      # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
 
-      # Step 3: Set up JDK 17
+      # Set up JDK 17
       - name: Set up JDK 17
         uses: actions/setup-java@v3
         with:
           java-version: '17'
           distribution: 'adopt'
 
-      # Step 4: Install Maven 3.9.9
+      # Install Maven 3.9.9
       - name: Setup Maven Action
         uses: s4u/setup-maven-action@v1.7.0
         with:
@@ -66,23 +78,23 @@ jobs:
           java-distribution: temurin
           maven-version: 3.9.9
 
-      # Step 5: Verify Maven installation
+      # Verify Maven installation
       - name: Verify Maven version
         run: mvn --version
 
-      # Step 6: Cache Maven dependencies
+      # ache Maven dependencies
       - name: Cache Maven dependencies
         uses: actions/cache@v3
         with:
           path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+          key: ${{ runner.os }}-maven-${{ matrix.branch }}-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven
 
-      # Step 7: Install Playwright dependencies
+      # Install Playwright dependencies
       - name: Install Playwright dependencies
         run: npx playwright install-deps
 
-      # Step 8: Run Maven to execute Playwright tests
+      # Run Maven to execute Playwright tests
       - name: Run Playwright Tests
         run: mvn verify
