--- a/.github/workflows/nightly-build.yml
+++ b/.github/workflows/nightly-build.yml
@@ -39,8 +39,15 @@ jobs:
           - sample-code/end-to-end
     continue-on-error: true # Allow the job to continue even if one branch fails
     steps:
+      # Clean workspace
+      - name: Clean up any existing files
+        run: |
+          echo "Cleaning up existing files"
+          rm -rf *
+          ls -a
+
       # Check out the repository code for the specific branch
-      - name: Checkout repository
+      - name: Checkout branch ${{ matrix.branch }}
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
@@ -54,6 +61,13 @@ jobs:
         run: |
           echo "Current branch: ${{ matrix.branch }}"
 
+      # Step 3: Confirm the branch and files
+      - name: Confirm Branch and Files
+        run: |
+          echo "Current branch: ${{ matrix.branch }}"
+          git branch
+          ls -R .
+
       # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -62,7 +76,7 @@ jobs:
 
       # Set up JDK 17
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'adopt'
@@ -95,4 +109,6 @@ jobs:
 
       # Run Maven to execute Playwright tests
       - name: Run Playwright Tests
-        run: mvn verify
+        run: |
+          echo "Running tests for branch ${{ matrix.branch }}"
+          mvn verify
