--- a/.github/workflows/setup-and-test.yml
+++ b/.github/workflows/setup-and-test.yml
@@ -8,18 +8,10 @@ on:
         type: string
 
 jobs:
-  setup:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the specified branch
-      - name: Checkout branch ${{ inputs.branch }}
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ inputs.branch }}
-          fetch-depth: 0
-          clean: true
-
       # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -47,19 +39,32 @@ jobs:
         run: mvn --version
 
       # ache Maven dependencies
-      - name: Cache Maven dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-maven-${{ inputs.branch }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            ${{ runner.os }}-maven
+#      - name: Cache Maven dependencies
+#        uses: actions/cache@v3
+#        with:
+#          path: ~/.m2
+#          key: ${{ runner.os }}-maven-${{ inputs.branch }}-${{ hashFiles('**/pom.xml') }}
+#          restore-keys: |
+#            ${{ runner.os }}-maven
 
       # Install Playwright dependencies
       - name: Install Playwright dependencies
         run: npx playwright install-deps
 
+      - name: Show Project Structure
+        run: |
+          echo "Project structure for branch ${{ inputs.branch}}:"
+          find . -name "*.java" | sed 's|[^/]*/|  |g'
 
+      # Checkout the specified branch
+      - name: Checkout branch ${{ inputs.branch }}
+        uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.branch }}
+          fetch-depth: 0
+          clean: true
+
+      # Run the test suite
       - name: Run Playwright Tests
         run: |
           echo "Running tests for branch ${{ inputs.branch }}"
