--- a/.github/workflows/nightly-builds.yml
+++ b/.github/workflows/nightly-builds.yml
@@ -7,151 +7,139 @@ on:
 
 jobs:
   build-main:
-    name: Build Main
+    name: Main
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: main
 
   build-start-here:
-    name: Build Start Here
+    name: Start Here
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/start-here
 
   build-module-3:
-    name: Build Module 3
+    name: Module 3 My First Playwright Test
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-3-my-first-playwright-test
 
   build-module-4:
-    name: Build Module 4
+    name: Module 4 Interacting With Elements
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-4-interacting-with-elements
 
   build-module-5:
-    name: Build Module 5
+    name: Module 5 Simple Refactoring
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-5-refactoring
 
   build-module-6:
-    name: Build Module 6
+    name: Module 6 Browser Options
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-6-browser-options
 
   build-module-7:
-    name: Build Module 7
+    name: Module 7 Browser Contexts
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-7-browser-contexts
 
   build-module-8-live-demo:
-    name: Build Module 8 Live Coding Demo
+    name: Module 8 Live Coding Demo
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-8-live-coding-demo
 
   build-module-8-locators:
-    name: Build Module 8 Locators
+    name: Module 8 Locators
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-8-locators
 
   build-module-9:
-    name: Build Module 9
+    name: Module 9 Forms and Elements
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-9-forms
 
   build-module-10:
-    name: Build Module 10
+    name: Module 10 Assertions
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-10-assertions
 
   build-module-11:
-    name: Build Module 11
+    name: Module 11 Waits
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-11-waits
 
   build-module-12-api:
-    name: Build Module 12 API Interactions
+    name: Module 12 API Interactions
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-12-api-interactions
 
   build-module-12-mocking:
-    name: Build Module 12 Mocking API Calls
+    name: Module 12 Mocking API Calls
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-12-mocking-api-calls
 
   build-module-13:
-    name: Build Module 13
+    name: Module 13 Page Objects
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-13-page-objects
 
-  build-module-14-allure:
-    name: Build Module 14 Allure Reporting
-    uses: ./.github/workflows/setup-and-test.yml
-    with:
-      branch: sample-code/module-14-allure-reporting
-
   build-module-14-org:
-    name: Build Module 14 Organizing Tests
+    name: Module 14 Organizing Tests
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-14-organizing-your-tests
 
-  build-module-14-parallel:
-    name: Build Module 14 Parallel Execution
-    uses: ./.github/workflows/setup-and-test.yml
-    with:
-      branch: sample-code/module-14-parallel-execution
-
   build-module-14-tracing:
-    name: Build Module 14 Tracing
+    name: Module 14 Tracing
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-14-tracing
 
   build-module-15-parallel:
-    name: Build Module 15 Parallel Execution
+    name: Module 15 Parallel Execution
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-15-parallel-execution
 
   build-module-15-annotated:
-    name: Build Module 15 Parallel Execution Annotated
+    name: Module 15 Parallel Execution Annotated
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-15-parallel-execution-annotated
 
   build-module-16:
-    name: Build Module 16
+    name: Module 16 Allure Reporting
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-16-allure-reporting
 
   build-module-17:
-    name: Build Module 17
+    name: Module 17 Cucumber
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-17-cucumber
 
-  build-module-20-docker:
-    name: Build Module 20 Docker
-    uses: ./.github/workflows/setup-and-test.yml
-    with:
-      branch: sample-code/module-20-docker
-
   build-module-20-start:
-    name: Build Module 20 Docker Start
+    name: Module 20 Docker Start
     uses: ./.github/workflows/setup-and-test.yml
     with:
       branch: sample-code/module-20-docker-start
+
+  build-module-20-docker:
+    name: Module 20 Docker
+    uses: ./.github/workflows/setup-and-test.yml
+    with:
+      branch: sample-code/module-20-docker
