--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,10 +1,10 @@
 # Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: Publish Allure Reports
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["*//module-18-end-to-end"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
